custard fixes mainly applying to page alignment

--- a/wiki/skins/custard/CSS/custard.css
+++ b/wiki/skins/custard/CSS/custard.css
@@ -35,7 +35,7 @@ body {
     height: 15px;
     text-align: center;
     color: #BBB;
-    line-height: 10px;
+    line-height: 12px;
 }
 
 #toolbar .toggle .invert {
@@ -114,14 +114,17 @@ body {
 
 #interwiki .left a, #interwiki .right a {
     width: 50%;
-    padding: 20px 0;
+    height: 60px;
+    line-height: 60px;
 }
 
 #interwiki .mid a {
     width: 100%;
+    height: 80px;
     padding: 25px 0;
     border-radius: 0 0 5px 5px;
     font-size: 125%;
+    line-height: 80px;
 }
 
 #interwiki a {
@@ -150,7 +153,7 @@ body {
     position: absolute;
     width: 5px;
     height: 5px;
-    margin: 20px 0 0 -5px;
+    margin-left: -5px;
     overflow: hidden;
 }
 
@@ -173,7 +176,6 @@ body {
     position: absolute;
     width: 5px;
     height: 5px;
-    margin: 20px 0 0;
     overflow: hidden;
 }
 
@@ -192,10 +194,11 @@ body {
 #page {
     position: absolute;
     background: white;
-    top: 151px;
+    top: 140px;
     bottom: 0;
-    left: 70px;
+    left: 50px;
     right: 0;
+    padding: 20px;
     border-top-left-radius: 5px;
 }
 
